--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Salem Baptist Church</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="/stylesheets/main.css">
+    <link rel="stylesheet" href="/stylesheets/mobile-menu.css">
 </head>
 <body>
     <header>
         <div id="mobile-header">
-            <div class="logo"><a href="#">Logo</a></div>
+            <div class="logo"><a href="#">Salem Baptist</a></div>
             <div id="hamburger-icon" onclick="openNav()">
                 <div class="icon-bars" >
                     <div class="one"></div>
@@ -25,33 +26,34 @@
             
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <div class="overlay-content">
-                <div class="logo"><a href="#">Logo</a></div>
+                <div class="logo"><a href="#">Salem Baptist</a></div>
                 <ul class="nav-menu">
-                    <li><a href="">Our Mission</a></li>
-                    <li><a href="">Connect</a></li>
-                    <li><a href="">Events</a></li>
-                    <li><a href="">Contacts</a></li>
-                    <li id="active"><a href="">Donate</a></li>
+                    <li><a href="#">Mission</a></li>
+                    <li><a href="#">Connect</a></li>
+                    <li><a href="#">Events</a></li>
+                    <li><a href="#">Contacts</a></li>
                 </ul>
                 <ul class="social-menu">
-                    <li><i class="fab fa-facebook"></i></li>
-                    <li><i class="far fa-envelope"></i></li>
-                    <li><i class="fab fa-youtube"></i></li>
+                    <li><a href="#"><i class="fab fa-facebook"></a></i></li>
+                    <li><a href="#"><i class="far fa-envelope"></a></i></li>
+                    <li><a href="#"><i class="fab fa-youtube"></a></i></li>
                 </ul>
-                
+                <li id="active" class="btn"><a href="#">Donate</a></li>    
             </div>
-        </nav>
-        <!-- <div class="intro">
+        </nav><!--End Nav-->
+        <div class="intro">
             <h1>Welcome to our Church</h1>
             <button class="btn btn-color">I'm new here</button>
         </div>
         <div class="newest-sermon">
             <h3>date and name of Sermon</h3>
-            <audio src="#"></audio>
+            <audio class="audio" controls preload="metadata">
+                <source src="#" type="audio/mpeg">
+            </audio>
         </div>
     </header>
 
-    <section id= "about">
+    <!--<section id= "about">
         <div class="mission container">
             <img src="" alt="">
             <div class="info">
