added about section and style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Salem Baptist Church</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=IM+Fell+English+SC|Josefin+Slab:700|Over+the+Rainbow" rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/main.css">
     <link rel="stylesheet" href="/stylesheets/mobile-menu.css">
 </head>
@@ -13,6 +14,7 @@
     <header>
         <div id="mobile-header">
             <div class="logo"><a href="#">Salem Baptist</a></div>
+
             <div id="hamburger-icon" onclick="openNav()">
                 <div class="icon-bars" >
                     <div class="one"></div>
@@ -42,8 +44,8 @@
             </div>
         </nav><!--End Nav-->
         <div class="intro">
-            <h1>Welcome to our Church</h1>
-            <button class="btn btn-color">I'm new here</button>
+            <h1>Welcome to Our Church</h1>
+            <button class="btn btn-color">I'm new here!</button>
         </div>
         <div class="newest-sermon">
             <h3>date and name of Sermon</h3>
@@ -53,33 +55,30 @@
         </div>
     </header>
 
-    <!--<section id= "about">
-        <div class="mission container">
-            <img src="" alt="">
+    <section id="about">
+        <div class="mission-container">
+            <img src="/images/intro-bg.jpg" alt="">
             <div class="info">
                 <h1>Our Mission</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                Repellendus aliquid mollitia optio id eos accusantium delectus 
-                repellat ea, porro sit nam nesciunt dolorem possimus, 
-                error sequi cupiditate? Quod, saepe perferendis.</p>
+                <p>Because God showed us love through his Son, we show Him love through loving others.</p>
                 <button class="btn btn-color">About Us</button>
             </div>
         </div>
-        <div class="mission container">
-            <img src="" alt="">
+        <div class="mission-container">
             <div class="info">
                 <h3>You belong</h3>
                 <h1>Our Community</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                Repellendus aliquid mollitia optio id eos accusantium delectus 
-                repellat ea, porro sit nam nesciunt dolorem possimus, 
-                error sequi cupiditate? Quod, saepe perferendis.</p>
+                <p>Nestled in a rual farming community, we think of the church more as a family than a 
+                formal, religious institution. For us, its not about what you wear or where you came from, we're only
+                concerned with how God is working in life now.
+                </p>
                 <button class="btn btn-color">Learn More</button>
             </div>
+            <img src="/images/Salem Baptist Church - Google Maps - Google Chrome 4_3_2019 11_30_00 PM.png" alt="">
         </div>
     </section>
 
-    <section id="events">
+    <!---<section id="events">
         <h3>Upcoming Events</h3>
         <h1>Join Our Community</h1>
         <div class="event-cards">
